fixing navbar overflow

--- a/client/src/pages/Portfolio/style.css
+++ b/client/src/pages/Portfolio/style.css
@@ -8,6 +8,7 @@
   grid-template-columns: auto auto;
   justify-content: center;
   min-width: 270px;
+  overflow: hidden;
 }
 
 /* CSS for projects */
